Implemented notification popup and notifications page on the front end, Dao implementation isn't ready yet.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -149,3 +149,11 @@ typeMismatch.filteredSearchForm.minPrice=The minimum price must be a numerical v
 typeMismatch.filteredSearchForm.maxPrice=The maximum price must be a numerical value
 
 system.rangeError=The minimum price can't be greater than the maximum price
+
+notifications.notifications=Notifications
+notifications.noNotifications=You have no new notifications right now.
+notifications.viewAll=View all notifications.
+notifications.proposals.sent=All memebers of a proposal have accepted, so it has been sent to the property's owner!
+notifications.proposals.sent.subject=A proposal has been sent
+notifications.proposals.hostProposal=You can see the members and as accept or decline it.
+notifications.proposals.hostProposal.subject=There is a new proposal for your property!
