--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -152,3 +152,10 @@ typeMismatch.filteredSearchForm.maxPrice=El precio máximo debe ser un número
 
 system.rangeError=El precio mínimo no puede ser mayor al precio máximo
 
+notifications.notifications=Notificaciones
+notifications.noNotifications=No tienes nuevas notificaciones en este momento.
+notifications.viewAll=Ver todas las notificaciones.
+notifications.proposals.sent=Todos los miembros de la propuesta han aceptado, así que fue enviada al dueño de la propiedad!
+notifications.proposals.sent.subject=Una propuesta ha sido enviada!
+notifications.proposals.hostProposal=Puede ver los integrantes y aceptarla o declinarla.
+notifications.proposals.hostProposal.subject=Hay una propuesta nueva para su propiedad!
