Front host detailed property availability

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -8,6 +8,7 @@ label.properties.seeMore=See more
 label.properties.noProperties=Oops, there are no properties loaded
 label.properties.delete=Delete property
 label.properties.pause=Pause property
+label.properties.activate=Activate property
 label.properties.in=in
 system.property.successful_delete=The property was deleted successfully!
 label.forgot_password=Forgot?
@@ -49,6 +50,7 @@ property.services=Services
 property.description=Description
 property.active=Active
 property.inactive=Inactive
+property.per_month= / month
 
 
 proposal.no_users_in_proposal=There are no users in this proposal.
