--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -8,6 +8,7 @@ label.properties.seeMore=Ver más
 label.properties.noProperties=Ups, no hay más propiedades
 label.properties.delete=Eliminar propiedad
 label.properties.pause=Pausar propiedad
+label.properties.activate=Activar propiedad
 label.properties.in=en
 system.property.successful_delete=La propiedad ha sido eliminada con éxito!
 label.forgot_password=Olvidaste?
@@ -49,6 +50,7 @@ property.services=Servicios
 property.description=Descripción
 property.active=Activa
 property.inactive=Inactiva
+property.per_month= / mes
 
 
 proposal.no_users_in_proposal=No hay usuarios en esta propuesta.
