Improved view of proposal creation

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -20,7 +20,7 @@ label.guest=Student
 label.terms_of_use=By clicking the 'Sign Up' button, you confirm that you accept our <br> Terms of use and Privacy Policy.
 label.have_account=Have an account?
 label.search=Search
-label.profile=Profile
+label.profile=View profile
 label.proposal.already_replied=You have already replied to this proposal.
 label.proposal.your_prpoperty=This is your property.
 label.profile.no_proposals=This user isn't participating in any proposals.
