--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -20,7 +20,7 @@ label.guest=Estudiante
 label.terms_of_use=Al apretar el botón de 'Registrarse', usted confirma que acepta nuestros <br> Terminos de uso y Política de Privacidad
 label.have_account=Ya tiene una cuenta?
 label.search=Búsqueda
-label.profile=Perfil
+label.profile=Ver perfil
 label.proposal.already_replied=Usted ya ha respondido a esta propuesta.
 label.proposal.your_prpoperty=Esta es su propiedad
 label.profile.no_proposals=Este usuario no es parte de ninguna propuesta.
