Implmeneted sending of notifications to proposal members and property owners from the front-end, and added notifications table to database(Issue #85)

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -161,7 +161,18 @@ system.rangeError=El precio mínimo no puede ser mayor al precio máximo
 notifications.notifications=Notificaciones
 notifications.noNotifications=No tienes nuevas notificaciones en este momento.
 notifications.viewAll=Ver todas las notificaciones.
+
+notifications.proposals.invitation.subject=Te han invitado a una propuesta!
+notifications.proposals.invitation=Pueder ver la propuesta con sus miembros y aceptarla o declinarla.
+
+notifications.proposals.deleted.subject=Una propuesta ha sido cancelada.
+notifications.proposals.deleted=Lamentablemente, el creador de la propuesta la ha cancelado.
+
+notifications.proposals.declined.subject=Una propuesta se ha cancelado.
+notifications.proposals.declined=Lamentablemente, alguien ha rechazado la propuesta y por lo tanto se ha cancelado.
+
 notifications.proposals.sent=Todos los miembros de la propuesta han aceptado, así que fue enviada al dueño de la propiedad!
 notifications.proposals.sent.subject=Una propuesta ha sido enviada!
+
 notifications.proposals.hostProposal=Puede ver los integrantes y aceptarla o declinarla.
 notifications.proposals.hostProposal.subject=Hay una propuesta nueva para su propiedad!
