--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -159,7 +159,18 @@ system.rangeError=The minimum price can't be greater than the maximum price
 notifications.notifications=Notifications
 notifications.noNotifications=You have no new notifications right now.
 notifications.viewAll=View all notifications.
+
+notifications.proposals.invitation.subject=You have been invited to a proposal!
+notifications.proposals.invitation=You can view the proposal with all of its members and accept or decline it.
+
+notifications.proposals.deleted.subject=A proposal has been cancelled
+notifications.proposals.deleted=Unfortunately, the creator of the proposal has cancelled it.
+
+notifications.proposals.declined.subject=A proposal has been cancelled.
+notifications.proposals.declined=Unfortunately, a member of the proposal has declined and it has therefore been cancelled.
+
 notifications.proposals.sent=All memebers of a proposal have accepted, so it has been sent to the property's owner!
 notifications.proposals.sent.subject=A proposal has been sent
+
 notifications.proposals.hostProposal=You can see the members and as accept or decline it.
 notifications.proposals.hostProposal.subject=There is a new proposal for your property!
