Allow user to create a proposal on its own

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -53,7 +53,7 @@ property.inactive=Inactive
 property.per_month= / month
 
 
-proposal.no_users_in_proposal=There are no users in this proposal.
+proposal.no_users_in_proposal=You are alone in this proposal.
 
 
 host.publish_property=Publish a property
