--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -53,7 +53,7 @@ property.inactive=Inactiva
 property.per_month= / mes
 
 
-proposal.no_users_in_proposal=No hay usuarios en esta propuesta.
+proposal.no_users_in_proposal=Estas sólo en esta propuesta.
 
 host.publish_property=Publicar una propiedad
 host.publish_property_button=Publicar propiedad
