--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -125,6 +125,8 @@ errors.duplicate_email=There's already an account with that email
 errors.password_mismatch=Please make sure that the passwords match
 error.404=404 Error: Page not found
 error.404.subText=We couldn't find the page you were looking for :( click <a href='{0}'> here </a> to get back to the homepage
+error.500=Oops, something went wrong!
+error.500.subText=We're sorry, we have detected an error in the website. Our staff has been notified and will repair it. \n We invite you to contact us at hola@aluprop.com.ar and we'll get back at you when we fix this issue. Thank you!
 
 #Sign Up form
 NotBlank.name=Please enter your first name.
@@ -174,3 +176,4 @@ notifications.proposals.sent.subject=A proposal has been sent
 
 notifications.proposals.hostProposal=You can see the members and as accept or decline it.
 notifications.proposals.hostProposal.subject=There is a new proposal for your property!
+
