Update 500 error page

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -126,7 +126,8 @@ errors.password_mismatch=Please make sure that the passwords match
 error.404=404 Error: Page not found
 error.404.subText=We couldn't find the page you were looking for :( click <a href='{0}'> here </a> to get back to the homepage
 error.500=Oops, something went wrong!
-error.500.subText=We're sorry, we have detected an error in the website. Our staff has been notified and will repair it. \n We invite you to contact us at hola@aluprop.com.ar and we'll get back at you when we fix this issue. Thank you!
+error.500.subText=We're sorry, we have detected an error in the website. Our staff has been notified and will repair it.\
+  We invite you to contact us at <a href="mailto:hola@aluprop.com.ar"> hola@aluprop.com.ar</a> and we'll get back at you when we fix this issue. Thank you!
 
 #Sign Up form
 NotBlank.name=Please enter your first name.
