--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -130,6 +130,7 @@ error.404.subText=No pudimos encontrar la página que estás buscando :( apretá
 error.500=Oh no, algo salió mal!
 error.500.subText=Lo lamentamos, detectamos un error en la página. Nuestro persona ha sido notificado y va a repararlo.\
    Te invitamos a contactarte con nosotros a <a href="mailto:hola@aluprop.com.ar"> hola@aluprop.com.ar</a> y te avisaremos cuando solucionemos el problema. Muchas gracias!
+error.403=403: Acceso denegado
 
 #Sign Up form
 NotBlank.name=Por favor escriba su nombre.
