Corrections in detailed property and profile

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -23,8 +23,9 @@ label.search=Search
 label.profile=View profile
 label.proposal.already_replied=You have already replied to this proposal.
 label.proposal.your_prpoperty=This is your property. You can either confirm or decline the offer:
-label.profile.no_proposals=This user isn't participating in any proposals.
-label.profile.no_properties=This user hasn't published any properties.
+label.profile.no_proposals=You are not participating in any proposals.
+label.profile.no_proposals_host=You haven't received any proposals.
+label.profile.no_properties=You haven't published any properties.
 label.profile.your_properties=Your properties
 label.search_results=Search results:
 label.search.no_properties=No properties found for the search.
