Added DROPPED state to proposal states, renamed INACTIVE to CANCELLED. Created Notification Utility to tidy up some controller code. Fixed proposal functionality for accepting and declining for both guests and property owners. Modified proposal view to reflect different states of the proposal correctly (Cancelled, dropped, declined).

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -22,7 +22,7 @@ label.have_account=Ya tiene una cuenta?
 label.search=Búsqueda
 label.profile=Ver perfil
 label.proposal.already_replied=Usted ya ha respondido a esta propuesta.
-label.proposal.your_prpoperty=Esta es su propiedad. Puedes confirmar o declinar la oferta:
+label.proposal.your_prpoperty=Esta es su propiedad. Puedes aceptar o declinar la oferta:
 label.profile.no_proposals=No eres parte de ninguna propuesta.
 label.profile.no_proposals_host=No has recibido ninguna propuesta.
 label.profile.no_properties=No has publicado ninguna propiedad.
@@ -117,7 +117,7 @@ label.profile.interests=Intereses
 label.profile.proposals=Propuestas
 label.profile.properties=Propiedades
 label.profile.noInterests=No estás interesado en ninguna propiedad.
-label.profile.findAProperty=Encuentra alguna que te interese!
+label.profile.findAProperty=Encuentra alguna que te interese y crea una propuesta!
 
 label.proposal.proposal=Propuesta
 label.proposal.accept=Aceptar
@@ -181,3 +181,7 @@ notifications.proposals.sent.subject=Una propuesta ha sido enviada!
 
 notifications.proposals.hostProposal=Puede ver los integrantes y aceptarla o declinarla.
 notifications.proposals.hostProposal.subject=Hay una propuesta nueva para su propiedad!
+proposal.proposal_dropped=El creador de esta propuesta la ha cancelado y por lo tanto se encuentra inactiva.
+proposal.proposal_declined=El dueño de la propiedad ha declinado la oferta y por lo tanto se encuentra inactiva.
+proposal.findAnotherProperty=Encuentra otra propiedad y crea una propuesta nueva!
+proposal.proposal_canceled=Uno o más usuarios han declinado la propuesta y por lo tanto se encuentra inactiva.
