--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -22,7 +22,7 @@ label.have_account=Have an account?
 label.search=Search
 label.profile=View profile
 label.proposal.already_replied=You have already replied to this proposal.
-label.proposal.your_prpoperty=This is your property. You can either confirm or decline the offer:
+label.proposal.your_prpoperty=This is your property. You can either accept or decline the offer:
 label.profile.no_proposals=You are not participating in any proposals.
 label.profile.no_proposals_host=You haven't received any proposals.
 label.profile.no_properties=You haven't published any properties.
@@ -114,7 +114,7 @@ label.profile.interests=Interests
 label.profile.proposals=Proposals
 label.profile.properties=Properties
 label.profile.noInterests=You are not interested in any properties.
-label.profile.findAProperty=Find one that suits you!
+label.profile.findAProperty=Find a property that suits you and make a proposal!
 
 
 label.proposal.proposal=Proposal
@@ -179,4 +179,7 @@ notifications.proposals.sent.subject=A proposal has been sent
 
 notifications.proposals.hostProposal=You can see the members and as accept or decline it.
 notifications.proposals.hostProposal.subject=There is a new proposal for your property!
-
+proposal.proposal_dropped=This proposal has been dropped by its creator and it is no longer active.
+proposal.proposal_declined=The owner of the property has declined the offer, this proposal is no longer active.
+proposal.findAnotherProperty=Find another property and make a new proposal!
+proposal.proposal_canceled=One or more users have declined the proposal and it is no longer active.
