Added message for proposal accepted by the property owner. Proposal image now shows up in gray-scale if the proposal has been declined, dropped or cancelled.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -183,3 +183,4 @@ proposal.proposal_dropped=This proposal has been dropped by its creator and it i
 proposal.proposal_declined=The owner of the property has declined the offer, this proposal is no longer active.
 proposal.findAnotherProperty=Find another property and make a new proposal!
 proposal.proposal_canceled=One or more users have declined the proposal and it is no longer active.
+proposal.proposal_accepted=The host has accepted the offer!
