Correct message in proposal list in host profile

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -185,4 +185,6 @@ proposal.proposal_dropped=El creador de esta propuesta la ha cancelado y por lo 
 proposal.proposal_declined=El dueño de la propiedad ha declinado la oferta y por lo tanto se encuentra inactiva.
 proposal.findAnotherProperty=Encuentra otra propiedad y crea una propuesta nueva!
 proposal.proposal_canceled=Uno o más usuarios han declinado la propuesta y por lo tanto se encuentra inactiva.
-proposal.proposal_accepted=El dueo de la propiedad ha aceptado la oferta!
+proposal.proposal_accepted=El dueño de la propiedad ha aceptado la oferta!
+proposal_profile_created_by=Creado por
+proposal_profile_including=incluyendo a
