--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -184,3 +184,5 @@ proposal.proposal_declined=The owner of the property has declined the offer, thi
 proposal.findAnotherProperty=Find another property and make a new proposal!
 proposal.proposal_canceled=One or more users have declined the proposal and it is no longer active.
 proposal.proposal_accepted=The host has accepted the offer!
+proposal_profile_created_by=Created by
+proposal_profile_including=including
