Create proposal button now displays the correct cursor, internationalized buttons in create proposal modal.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -178,4 +178,6 @@ notifications.proposals.sent.subject=A proposal has been sent
 
 notifications.proposals.hostProposal=You can see the members and as accept or decline it.
 notifications.proposals.hostProposal.subject=There is a new proposal for your property!
+label.close=Close
+proposal.create=Create
 
