--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -180,3 +180,5 @@ notifications.proposals.sent.subject=Una propuesta ha sido enviada!
 
 notifications.proposals.hostProposal=Puede ver los integrantes y aceptarla o declinarla.
 notifications.proposals.hostProposal.subject=Hay una propuesta nueva para su propiedad!
+label.close=Cerrar
+proposal.create=Crear
