Create Proposal popup is complete! We should merge this branch asap.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -179,5 +179,11 @@ notifications.proposals.sent.subject=A proposal has been sent
 notifications.proposals.hostProposal=You can see the members and as accept or decline it.
 notifications.proposals.hostProposal.subject=There is a new proposal for your property!
 label.close=Close
+
 proposal.create=Create
+proposal.createExplanation=Select up to {0} other students to create a proposal to rent this property and split the rent. If you create a proposal without selecting anyone, the offer will be sent directly to the host and you will be paying full rent.
+proposal.youHaveSelected=You have selected 
+proposal.eachGuestWillBePaying=\ other guests. Each student will be paying $
+proposal.youWillBePaying=\ You have selected no other students. You will be paying $
+proposal.month=/month
 
