--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -175,10 +175,16 @@ notifications.proposals.deleted=Lamentablemente, el creador de la propuesta la h
 notifications.proposals.declined.subject=Una propuesta se ha cancelado.
 notifications.proposals.declined=Lamentablemente, alguien ha rechazado la propuesta y por lo tanto se ha cancelado.
 
-notifications.proposals.sent=Todos los miembros de la propuesta han aceptado, así que fue enviada al dueño de la propiedad!
+notifications.proposals.sent=Todos los miembros de la propuesta han aceptado y por lo tanto ha sido enviada al dueño de la propiedad!
 notifications.proposals.sent.subject=Una propuesta ha sido enviada!
 
 notifications.proposals.hostProposal=Puede ver los integrantes y aceptarla o declinarla.
 notifications.proposals.hostProposal.subject=Hay una propuesta nueva para su propiedad!
 label.close=Cerrar
+
 proposal.create=Crear
+proposal.createExplanation=Selecciona hasta {0} otros estudiantes para crear una propuesta de renta, el precio se dividirá entre los participantes. Si creas una propuesta sin elegir a nadie más, se le hará una oferta al propietario donde pagarás la renta completa.
+proposal.youHaveSelected=Has seleccionado 
+proposal.eachGuestWillBePaying=\ otros estudiantes. Cada uno pagará $
+proposal.youWillBePaying=\ No has seleccionado a ningún otro estudiante. Pagarás $
+proposal.month=/mes
