Change list view interested users

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -129,7 +129,7 @@ errors.password_mismatch=Por favor asegurese que las contraseñas coincidan
 error.404=Error 404: Página no encontrada
 error.404.subText=No pudimos encontrar la página que estás buscando :( apretá <a href=\"{0}\"> acá </a> para volver a la página de incio
 error.500=Oh no, algo salió mal!
-error.500.subText=Lo lamentamos, detectamos un error en la página. Nuestro persona ha sido notificado y va a repararlo.\
+error.500.subText=Lo lamentamos, detectamos un error en la página. Nuestro personal ha sido notificado y va a repararlo.\
    Te invitamos a contactarte con nosotros a <a href="mailto:hola@aluprop.com.ar"> hola@aluprop.com.ar</a> y te avisaremos cuando solucionemos el problema. Muchas gracias!
 error.403=403: Acceso denegado
 
