Fixed bug in createProperty and in proposal creation popup.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -144,6 +144,8 @@ Range.careerId=Please select a career from the list.
 Range.gender=Please indicate your gender from the list.
 Range.role=Please select a role from the list.
 Pattern.birthDate=Please enter the date in yyyy-MM-dd format
+typeMismatch.price=Please enter a valid price
+
 
 #Property creation form
 Size.description=Please enter a name of length under {1} characters.
@@ -192,7 +194,7 @@ label.close=Close
 proposal.create=Create
 proposal.createExplanation=Select up to {0} other students to create a proposal to rent this property and split the rent. If you create a proposal without selecting anyone, the offer will be sent directly to the host and you will be paying full rent.
 proposal.youHaveSelected=You have selected 
-proposal.eachGuestWillBePaying=\ other guests. Each student will be paying $
+proposal.eachGuestWillBePaying=\ other students. Each student will be paying $
 proposal.youWillBePaying=\ You have selected no other students. You will be paying $
 proposal.month=/month
 
