--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -156,6 +156,7 @@ Range.propertyType=Por favor seleccione el tipo de propiedad
 Range.neighbourhoodId=Por favor seleccione el barrio
 Range.privacyLevel=Por favor seleccione el nivel de privacidad
 Range.capacity=Por favor seleccione un valor entre 1 y 100.
+typeMismatch.price=Por favor increse un monto válido.
 
 typeMismatch.filteredSearchForm.capacity=La capacidad debe ser un número
 typeMismatch.filteredSearchForm.minPrice=El precio mínimo debe ser un número
