Message changes in profile & proposal

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -185,7 +185,9 @@ proposal.proposal_dropped=This proposal has been dropped by its creator and it i
 proposal.proposal_declined=The owner of the property has declined the offer, this proposal is no longer active.
 proposal.findAnotherProperty=Find another property and make a new proposal!
 proposal.proposal_canceled=One or more users have declined the proposal and it is no longer active.
-proposal.proposal_accepted=The host has accepted the offer!
+proposal.proposal_accepted_guest=The host has accepted the offer! Now you can contact the other students and the host.
+proposal.proposal_accepted_host=You have accepted the offer. Now you can contact the guests!
+proposal.proposal_declined_host=This proposal has been dropped.
 proposal_profile_created_by=Created by
 proposal_profile_including=including
 
