--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -186,7 +186,9 @@ proposal.proposal_dropped=El creador de esta propuesta la ha cancelado y por lo 
 proposal.proposal_declined=El dueño de la propiedad ha declinado la oferta y por lo tanto se encuentra inactiva.
 proposal.findAnotherProperty=Encuentra otra propiedad y crea una propuesta nueva!
 proposal.proposal_canceled=Uno o más usuarios han declinado la propuesta y por lo tanto se encuentra inactiva.
-proposal.proposal_accepted=El dueño de la propiedad ha aceptado la oferta!
+proposal.proposal_accepted_guest=El dueño de la propiedad ha aceptado la oferta! Ahora puedes contactar al resto de los estudiantes y al dueño.
+proposal.proposal_accepted_host=Has aceptado la propuesta, ahora puedes contactar a los estudiantes!
+proposal.proposal_declined_host=La propuesta ha sido dada de baja. 
 proposal_profile_created_by=Creada por
 proposal_profile_including=incluyendo a
 label.close=Cerrar
