propertyDetails page now reflects a property being inactive.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -199,4 +199,5 @@ proposal.youHaveSelected=You have selected
 proposal.eachGuestWillBePaying=\ other students. Each student will be paying $
 proposal.youWillBePaying=\ You have selected no other students. You will be paying $
 proposal.month=/month
+property.inactiveExplanation=This property is inactive, you cannot create proposals or show interest in it.
 
