--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -199,3 +199,4 @@ proposal.youHaveSelected=Has seleccionado
 proposal.eachGuestWillBePaying=\ otros estudiantes. Cada uno pagará $
 proposal.youWillBePaying=\ No has seleccionado a ningún otro estudiante. Pagarás $
 proposal.month=/mes
+property.inactiveExplanation=Esta propiedad se encuentra inactiva, no puedes crear propuestas ni mostrar interés en ella.
