--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -187,7 +187,7 @@ proposal.proposal_declined=El dueño de la propiedad ha declinado la oferta y po
 proposal.findAnotherProperty=Encuentra otra propiedad y crea una propuesta nueva!
 proposal.proposal_canceled=Uno o más usuarios han declinado la propuesta y por lo tanto se encuentra inactiva.
 proposal.proposal_accepted_guest=El dueño de la propiedad ha aceptado la oferta! Ahora puedes contactar al resto de los estudiantes y al dueño.
-proposal.proposal_accepted_host=Has aceptado la propuesta, ahora puedes contactar a los estudiantes!
+proposal.proposal_accepted_host=Has aceptado la propuesta, ahora puedes contactar a los estudiantes! La propiedad ahora está deshabilitada.
 proposal.proposal_declined_host=La propuesta ha sido dada de baja. 
 proposal_profile_created_by=Creada por
 proposal_profile_including=incluyendo a
