Search results include capacity and budget

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -77,11 +77,13 @@ forms.apartment=Departamento
 forms.loft=Loft
 forms.upload=Subir
 forms.neighborhood=Barrio:
-forms.privacy=Privacidad: 
+forms.privacy=Privacidad:
 forms.privacy.individual=Individual
 forms.privacy.shared=Compartido
 forms.capacity=Capacidad:
+forms.max_capacity=Capacidad máxima:
 forms.rent_per_month=Renta por mes:
+forms.budget=Presupuesto por mes:
 forms.rent_per_month_min=Mínimo
 forms.rent_per_month_max=Máximo
 forms.rules=Reglas:
