--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -78,11 +78,13 @@ forms.apartment=Apartment
 forms.loft=Loft
 forms.upload=Upload
 forms.neighborhood=Neighborhood:
-forms.privacy=Privacy
+forms.privacy=Privacy:
 forms.privacy.individual=Individual
 forms.privacy.shared=Shared
 forms.capacity=Capacity:
+forms.max_capacity=Max capacity:
 forms.rent_per_month=Rent per month:
+forms.budget=Budget per month:
 forms.rent_per_month_min=Min
 forms.rent_per_month_max=Max
 forms.rules=Rules:
