Added accepted proposal messages.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -181,6 +181,10 @@ notifications.proposals.sent.subject=A proposal has been sent
 
 notifications.proposals.hostProposal=You can see the members and as accept or decline it.
 notifications.proposals.hostProposal.subject=There is a new proposal for your property!
+
+notifications.proposals.accepted.subject=A proposal you're in has been accepted!
+notifications.proposals.accepted=The owner of the property has accepted your offer
+
 proposal.proposal_dropped=This proposal has been dropped by its creator and it is no longer active.
 proposal.proposal_declined=The owner of the property has declined the offer, this proposal is no longer active.
 proposal.findAnotherProperty=Find another property and make a new proposal!
