--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -182,6 +182,10 @@ notifications.proposals.sent.subject=Una propuesta ha sido enviada!
 
 notifications.proposals.hostProposal=Puede ver los integrantes y aceptarla o declinarla.
 notifications.proposals.hostProposal.subject=Hay una propuesta nueva para su propiedad!
+
+notifications.proposals.accepted.subject=Una propuesta de la que formas parte ha sido aceptada!
+notifications.proposals.accepted=El dueño de la propiedad ha aceptado la oferta
+
 proposal.proposal_dropped=El creador de esta propuesta la ha cancelado y por lo tanto se encuentra inactiva.
 proposal.proposal_declined=El dueño de la propiedad ha declinado la oferta y por lo tanto se encuentra inactiva.
 proposal.findAnotherProperty=Encuentra otra propiedad y crea una propuesta nueva!
