--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -192,7 +192,7 @@ proposal.proposal_declined=The owner of the property has declined the offer, thi
 proposal.findAnotherProperty=Find another property and make a new proposal!
 proposal.proposal_canceled=One or more users have declined the proposal and it is no longer active.
 proposal.proposal_accepted_guest=The host has accepted the offer! Now you can contact the other students and the host.
-proposal.proposal_accepted_host=You have accepted the offer, now you can contact the guests! The property has now become unavailable. 
+proposal.proposal_accepted_host=You have accepted the offer, now you can contact the guests! The property has now become inactive. 
 proposal.proposal_declined_host=This proposal has been dropped.
 proposal_profile_created_by=Created by
 proposal_profile_including=including
