Order by in index

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -207,3 +207,12 @@ proposal.youWillBePaying=\ You have selected no other students. You will be payi
 proposal.month=/month
 property.inactiveExplanation=This property is inactive, you cannot create proposals or show interest in it.
 
+order_by=Order by
+order_by_most_recent=Newest
+order_by_least_recent=Oldest
+order_by_capacity_desc=Highest capacity
+order_by_capacity_ascen=Lowest capacity
+order_by_price_desc=Highest price per month
+order_by_price_ascen=Lowest price per month
+order_by_budget_desc=Highest budget
+order_by_budget_ascen=Lowest budget
