--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -206,3 +206,14 @@ proposal.eachGuestWillBePaying=\ otros estudiantes. Cada uno pagará $
 proposal.youWillBePaying=\ No has seleccionado a ningún otro estudiante. Pagarás $
 proposal.month=/mes
 property.inactiveExplanation=Esta propiedad se encuentra inactiva, no puedes crear propuestas ni mostrar interés en ella.
+
+
+order_by=Ordenar según
+order_by_most_recent=Más nuevas
+order_by_least_recent=Más viejas
+order_by_capacity_desc=Máxima capacidad
+order_by_capacity_ascen=Mínima capacidad
+order_by_price_desc=Máxima renta por mes
+order_by_price_ascen=Mínima renta por mes
+order_by_budget_desc=Máximo presupuesto
+order_by_budget_ascen=Mínimo presupuesto
