Internationalize confirmation emails

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -207,6 +207,7 @@ proposal.youWillBePaying=\ You have selected no other students. You will be payi
 proposal.month=/month
 property.inactiveExplanation=This property is inactive, you cannot create proposals or show interest in it.
 
+
 order_by=Order by
 order_by_most_recent=Newest
 order_by_least_recent=Oldest
@@ -216,3 +217,7 @@ order_by_price_desc=Highest price per month
 order_by_price_ascen=Lowest price per month
 order_by_budget_desc=Highest budget
 order_by_budget_ascen=Lowest budget
+
+email.confirmation.title=Hello {0}, welcome to AluProp!
+email.confirmation.body=Thank you for choosing us!\n Enter http://pawserver.it.itba.edu.ar/paw-2019a-5/ to see the availables properties, show interest and create proposals, or publish your properties!\n Cheers\n The AluProp team
+
