--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -217,3 +217,7 @@ order_by_price_desc=Máxima renta por mes
 order_by_price_ascen=Mínima renta por mes
 order_by_budget_desc=Máximo presupuesto
 order_by_budget_ascen=Mínimo presupuesto
+
+email.confirmation.title=Hola {0}, bienvenido a AluProp!
+email.confirmation.body=Muchas gracias por elegirnos!\n Ingresa a http://pawserver.it.itba.edu.ar/paw-2019a-5/ para ver las propiedades disponibles, mostrar tu interés y crear propuestas, o bien publicar tus propiedades!\nSaludos,\nEl equipo de AluProp.
+
