Fixed internationalization in sign up

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -146,7 +146,7 @@ Size.phoneNumber=Por favor escriba un número de telefono válido.
 Range.universityId=Por favor seleccione una universidad de la lista.
 Range.careerId=Por favor seleccione una carrera de la lista.
 Range.gender=Por favor especifique su género.
-Range.role=Please select a role from the list.
+Range.role=Por favor, elija un rl de la lista.
 Pattern.birthDate=Por favor escriba la fecha en el formato yyyy-MM-dd.
 
 #Property creation form
