Notifications are now marked as unread when opened, proposals now include a link to the property.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -222,4 +222,5 @@ order_by_budget_ascen=Lowest budget
 
 email.confirmation.title=Hello {0}, welcome to AluProp!
 email.confirmation.body=Thank you for choosing us!\n Enter http://pawserver.it.itba.edu.ar/paw-2019a-5/ to see the availables properties, show interest and create proposals, or publish your properties!\n Cheers\n The AluProp team
+notifications.newNotifications=New Notifications
 
