--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -167,7 +167,7 @@ typeMismatch.filteredSearchForm.maxPrice=El precio máximo debe ser un número
 system.rangeError=El precio mínimo no puede ser mayor al precio máximo
 
 notifications.notifications=Notificaciones
-notifications.noNotifications=No tienes nuevas notificaciones en este momento.
+notifications.noNotifications=No tienes  notificaciones nuevas en este momento.
 notifications.viewAll=Ver todas las notificaciones.
 
 notifications.proposals.invitation.subject=Te han invitado a una propuesta!
@@ -222,4 +222,4 @@ order_by_budget_ascen=Mínimo presupuesto
 
 email.confirmation.title=Hola {0}, bienvenido a AluProp!
 email.confirmation.body=Muchas gracias por elegirnos!\n Ingresa a http://pawserver.it.itba.edu.ar/paw-2019a-5/ para ver las propiedades disponibles, mostrar tu interés y crear propuestas, o bien publicar tus propiedades!\nSaludos,\nEl equipo de AluProp.
-
+notifications.newNotifications=Notificaciones Nuevas
