Fixed issue #121 regarding handling of request params.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -223,3 +223,4 @@ order_by_budget_ascen=Mínimo presupuesto
 email.confirmation.title=Hola {0}, bienvenido a AluProp!
 email.confirmation.body=Muchas gracias por elegirnos!\n Ingresa a http://pawserver.it.itba.edu.ar/paw-2019a-5/ para ver las propiedades disponibles, mostrar tu interés y crear propuestas, o bien publicar tus propiedades!\nSaludos,\nEl equipo de AluProp.
 notifications.newNotifications=Notificaciones Nuevas
+notifications.noAllNotifications=No tienes notificaciones.
