Internationalized rules and services.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -224,3 +224,10 @@ email.confirmation.title=Hola {0}, bienvenido a AluProp!
 email.confirmation.body=Muchas gracias por elegirnos!\n Ingresa a http://pawserver.it.itba.edu.ar/paw-2019a-5/ para ver las propiedades disponibles, mostrar tu interés y crear propuestas, o bien publicar tus propiedades!\nSaludos,\nEl equipo de AluProp.
 notifications.newNotifications=Notificaciones Nuevas
 notifications.noAllNotifications=No tienes notificaciones.
+
+rules.noSmoking=No smoking
+rules.noPets=No pets allowed
+
+services.internet=Internet
+services.laundryMachine=Laundry Machine
+services.kitchen=Kitchen
