--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -225,3 +225,9 @@ email.confirmation.body=Thank you for choosing us!\n Enter http://pawserver.it.i
 notifications.newNotifications=New Notifications
 notifications.noAllNotifications=You have no notifications
 
+rules.noSmoking=No fumar
+rules.noPets=Mascotas prohibidas
+
+services.internet=Internet
+services.laundryMachine=Lavarropas
+services.kitchen=Cocina
