internationalization of email

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -221,5 +221,5 @@ order_by_budget_desc=Máximo presupuesto
 order_by_budget_ascen=Mínimo presupuesto
 
 email.confirmation.title=Hola {0}, bienvenido a AluProp!
-email.confirmation.body=Muchas gracias por elegirnos!\n Ingresa a http://pawserver.it.itba.edu.ar/paw-2019a-5/ para ver las propiedades disponibles, mostrar tu interés y crear propuestas, o bien publicar tus propiedades!\nSaludos,\nEl equipo de AluProp.
+email.confirmation.body=Muchas gracias por elegirnos!\n Ingresa a {0} para ver las propiedades disponibles, mostrar tu interés y crear propuestas, o bien publicar tus propiedades!\nSaludos,\nEl equipo de AluProp.
 
