Herp derp mixed up the languages.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -225,9 +225,9 @@ email.confirmation.body=Thank you for choosing us!\n Enter http://pawserver.it.i
 notifications.newNotifications=New Notifications
 notifications.noAllNotifications=You have no notifications
 
-rules.noSmoking=No fumar
-rules.noPets=Mascotas prohibidas
+rules.noSmoking=No smoking
+rules.noPets=No pets allowed
 
 services.internet=Internet
-services.laundryMachine=Lavarropas
-services.kitchen=Cocina
+services.laundryMachine=Laundry Machine
+services.kitchen=Kitchen
