--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -225,9 +225,9 @@ email.confirmation.body=Muchas gracias por elegirnos!\n Ingresa a http://pawserv
 notifications.newNotifications=Notificaciones Nuevas
 notifications.noAllNotifications=No tienes notificaciones.
 
-rules.noSmoking=No smoking
-rules.noPets=No pets allowed
+rules.noSmoking=No fumar
+rules.noPets=Mascotas prohibidas
 
 services.internet=Internet
-services.laundryMachine=Laundry Machine
-services.kitchen=Kitchen
+services.laundryMachine=Lavarropas
+services.kitchen=Cocina
