--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -27,7 +27,7 @@ label.profile.no_proposals=You are not participating in any proposals.
 label.profile.no_proposals_host=You haven't received any proposals.
 label.profile.no_properties=You haven't published any properties.
 label.profile.your_properties=Your properties
-label.search_results=Search results:
+label.search_results=Search results
 label.search.no_properties=No properties found for the search.
 label.guests=guests
 
