Added property name to notifications.

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -169,37 +169,40 @@ notifications.notifications=Notifications
 notifications.noNotifications=You have no new notifications right now.
 notifications.viewAll=View all notifications.
 
-notifications.proposals.invitation.subject=You have been invited to a proposal!
+notifications.proposals.invitation.subject=You have been invited to a proposal for "{0}"!
 notifications.proposals.invitation=You can view the proposal with all of its members and accept or decline it.
 
-notifications.proposals.deleted.subject=A proposal has been cancelled
+notifications.proposals.deleted.subject=A proposal for "{0}" has been deleted.
 notifications.proposals.deleted=Unfortunately, the creator of the proposal has cancelled it.
 
-notifications.proposals.declined.subject=A proposal has been cancelled.
+notifications.proposals.declined.subject=A proposal for "{0}" has been cancelled.
 notifications.proposals.declined=Unfortunately, a member of the proposal has declined and it has therefore been cancelled.
 
+notifications.proposals.sent.subject=A proposal for "{0}" has been sent
 notifications.proposals.sent=All memebers of a proposal have accepted, so it has been sent to the property's owner!
-notifications.proposals.sent.subject=A proposal has been sent
 
+notifications.proposals.hostProposal.subject=There is a new proposal for your property, "{0}"!
 notifications.proposals.hostProposal=You can see the members and as accept or decline it.
-notifications.proposals.hostProposal.subject=There is a new proposal for your property!
 
-notifications.proposals.accepted.subject=A proposal you're in has been accepted!
+notifications.proposals.accepted.subject=A proposal you are in for "{0}" has been accepted!
 notifications.proposals.accepted=The owner of the property has accepted your offer
+
+notifications.newNotifications=New Notifications
+notifications.noAllNotifications=You have no notifications
 
 proposal.proposal_dropped=This proposal has been dropped by its creator and it is no longer active.
 proposal.proposal_declined=The owner of the property has declined the offer, this proposal is no longer active.
 proposal.findAnotherProperty=Find another property and make a new proposal!
 proposal.proposal_canceled=One or more users have declined the proposal and it is no longer active.
+proposal.proposal_sent=An offer has been sent to the host, you will receive a notification when they reply!
 proposal.proposal_accepted_guest=The host has accepted the offer! Now you can contact the other students and the host.
 proposal.proposal_accepted_host_info=Host's information: 
 proposal.proposal_accepted_host=You have accepted the offer, now you can contact the guests! The property has now become inactive. 
 proposal.proposal_declined_host=This proposal has been dropped.
 proposal_profile_created_by=Created by
 proposal_profile_including=including
-proposal.rented_host=This property is currently inactive. In order to answer the proposal please make it active.
-
 label.close=Close
+proposal.rented_host=This property is currently inactive. In order to answer the proposal please make it active.
 
 proposal.create=Create
 proposal.createExplanation=Select up to {0} other students to create a proposal to rent this property and split the rent. If you create a proposal without selecting anyone, the offer will be sent directly to the host and you will be paying full rent.
@@ -222,8 +225,6 @@ order_by_budget_ascen=Lowest budget
 
 email.confirmation.title=Hello {0}, welcome to AluProp!
 email.confirmation.body=Thank you for choosing us!\n Enter {0} to see the availables properties, show interest and create proposals, or publish your properties!\n Cheers\n The AluProp team
-notifications.newNotifications=New Notifications
-notifications.noAllNotifications=You have no notifications
 
 rules.noSmoking=No smoking
 rules.noPets=No pets allowed
