--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -167,30 +167,34 @@ typeMismatch.filteredSearchForm.maxPrice=El precio máximo debe ser un número
 system.rangeError=El precio mínimo no puede ser mayor al precio máximo
 
 notifications.notifications=Notificaciones
-notifications.noNotifications=No tienes nuevas notificaciones en este momento.
+notifications.noNotifications=No tienes notificaciones nuevas en este momento.
 notifications.viewAll=Ver todas las notificaciones.
 
-notifications.proposals.invitation.subject=Te han invitado a una propuesta!
+notifications.proposals.invitation.subject=Te han invitado a una propuesta para "{0}"!
 notifications.proposals.invitation=Pueder ver la propuesta con sus miembros y aceptarla o declinarla.
 
-notifications.proposals.deleted.subject=Una propuesta ha sido cancelada.
+notifications.proposals.deleted.subject=Una propuesta para "{0}" ha sido cancelada.
 notifications.proposals.deleted=Lamentablemente, el creador de la propuesta la ha cancelado.
 
-notifications.proposals.declined.subject=Una propuesta se ha cancelado.
+notifications.proposals.declined.subject=Una propuesta para "{0}" se ha cancelado.
 notifications.proposals.declined=Lamentablemente, alguien ha rechazado la propuesta y por lo tanto se ha cancelado.
 
+notifications.proposals.sent.subject=Una propuesta para "{0}" ha sido enviada!
 notifications.proposals.sent=Todos los miembros de la propuesta han aceptado y por lo tanto ha sido enviada al dueño de la propiedad!
-notifications.proposals.sent.subject=Una propuesta ha sido enviada!
 
+notifications.proposals.hostProposal.subject=Hay una propuesta nueva para su propiedad, "{0}"!
 notifications.proposals.hostProposal=Puede ver los integrantes y aceptarla o declinarla.
-notifications.proposals.hostProposal.subject=Hay una propuesta nueva para su propiedad!
 
-notifications.proposals.accepted.subject=Una propuesta de la que formas parte ha sido aceptada!
+notifications.proposals.accepted.subject=Una propuesta para "{0}" de la que eres miembro ha sido aceptada!
 notifications.proposals.accepted=El dueño de la propiedad ha aceptado la oferta
+
+notifications.newNotifications=Notificaciones Nuevas
+notifications.noAllNotifications=No tienes notificaciones.
 
 proposal.proposal_dropped=El creador de esta propuesta la ha cancelado y por lo tanto se encuentra inactiva.
 proposal.proposal_declined=El dueño de la propiedad ha declinado la oferta y por lo tanto se encuentra inactiva.
 proposal.findAnotherProperty=Encuentra otra propiedad y crea una propuesta nueva!
+proposal.proposal_sent=Una oferta se ha enviado al dueño de la propiedad, recibirás una notificación cuando responda!
 proposal.proposal_canceled=Uno o más usuarios han declinado la propuesta y por lo tanto se encuentra inactiva.
 proposal.proposal_accepted_guest=El dueño de la propiedad ha aceptado la oferta! Ahora puedes contactar al resto de los estudiantes y al dueño.
 proposal.proposal_accepted_host_info=Información del dueño: 
@@ -201,7 +205,7 @@ proposal_profile_including=incluyendo a
 label.close=Cerrar
 proposal.rented_host=Ésta propiedad se encuentra inactiva. Para poder responder la propuesta por favor activala.
 
-proposal.create=Crearyou
+proposal.create=Crear
 proposal.createExplanation=Selecciona hasta {0} otros estudiantes para crear una propuesta de renta, el precio se dividirá entre los participantes. Si creas una propuesta sin elegir a nadie más, se le hará una oferta al propietario donde pagarás la renta completa.
 proposal.youHaveSelected=Has seleccionado 
 proposal.eachGuestWillBePaying=\ otros estudiantes. Cada uno pagará $
@@ -223,3 +227,9 @@ order_by_budget_ascen=Mínimo presupuesto
 email.confirmation.title=Hola {0}, bienvenido a AluProp!
 email.confirmation.body=Muchas gracias por elegirnos!\n Ingresa a {0} para ver las propiedades disponibles, mostrar tu interés y crear propuestas, o bien publicar tus propiedades!\nSaludos,\nEl equipo de AluProp.
 
+rules.noSmoking=No fumar
+rules.noPets=Mascotas prohibidas
+
+services.internet=Internet
+services.laundryMachine=Lavarropas
+services.kitchen=Cocina
