Proposal informing price per month to user

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -125,6 +125,8 @@ label.proposal.proposal=Propuesta
 label.proposal.accept=Aceptar
 label.proposal.decline=Rechazar
 label.proposal.cancel=Cancelar la propuesta
+label.proposal.you_would_pay=Usted pagaría
+label.proposal.per_month=por mes.
 
 errors.duplicate_email=Ya existe un usuario con esa dirección de mail
 errors.password_mismatch=Por favor asegurese que las contraseñas coincidan
