--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -123,6 +123,8 @@ label.proposal.proposal=Proposal
 label.proposal.accept=Accept
 label.proposal.decline=Decline
 label.proposal.cancel=Drop the proposal
+label.proposal.you_would_pay=Your would pay
+label.proposal.per_month=per month.
 
 errors.duplicate_email=There's already an account with that email
 errors.password_mismatch=Please make sure that the passwords match
