Fixed message in profile to be clearer, added $ sign in proposal price annotation.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -120,6 +120,7 @@ label.profile.proposals=Propuestas
 label.profile.properties=Propiedades
 label.profile.noInterests=No estás interesado en ninguna propiedad.
 label.profile.findAProperty=Encuentra alguna que te interese y crea una propuesta!
+label.profile.hostProposals=Propuestas para tus propiedades
 
 label.proposal.proposal=Propuesta
 label.proposal.accept=Aceptar
