--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -234,3 +234,4 @@ rules.noPets=No pets allowed
 services.internet=Internet
 services.laundryMachine=Laundry Machine
 services.kitchen=Kitchen
+label.profile.hostProposals=Proposals for your properties
